[package]
name = "wkb"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/wkb"
description = "Standalone WKB reader and writer"
categories = ["science::geo"]
# 1.82 is the minimum version for `impl GeometryTrait + use<'_>` in `read_wkb`
# https://rust-lang.github.io/rfcs/3617-precise-capturing.html
rust-version = "1.82"

[dependencies]
byteorder = "1"
geo-traits = "0.1.1"
num_enum = "0.7"
thiserror = "1"

[dev-dependencies]
approx = "0.5.1"
bytes = "1.5.0"
criterion = { version = "0.5", features = ["html_reports"] }
geo-types = "0.7.13"
wkt = { git = "https://github.com/georust/wkt", branch = "kyle/geo-traits" }

[[bench]]
name = "parse"
harness = false

[lib]
doctest = true
